code-review: shorten gap between calendar dropdowns to avoid ellipsis

--- a/packages/lab/src/calendar/CalendarNavigation.css
+++ b/packages/lab/src/calendar/CalendarNavigation.css
@@ -19,5 +19,5 @@
 .saltCalendarNavigation-dropdowns {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: var(--salt-spacing-100);
+  grid-gap: var(--salt-spacing-50);
 }
